--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect 
-title: STAR TEKNOLOJİ
-description:  WELCOME... 
+title: STAR TEKNOLOG 
+description:  Sistem Mimarisi Uzmanlığı 
