--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-architect 
-title: STAR TEKNOLOG 
-description:  Sistem Mimarisi Uzmanlığı 
+title: StarTeknolog
+description:    HOŞGELDİNİZ
+  
